--- a/project-6/index.html
+++ b/project-6/index.html
@@ -6,103 +6,263 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fair Trade Coffee</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
+
     <div class="container">
         <h1 style="text-align: center;">Fair Trade Coffee</h1>
-        <hr>
         <p style="text-align: center;">Prove the authenticity of coffee using the Ethereum blockchain.</p>
     </div>
 
-    <div id="ftc-harvest">
-        <h2>Product Overview</h2>
-        <div class="form-group">
-            SKU
-            <br>
-            <input class="input-field" type="number" id="sku" name="sku" value=1><br>
-            UPC
-            <br>
-            <input type="number" id="upc" name="upc" value=1><br>
-            Current Owner ID
-            <br>
-            <input type="text" id="ownerID" name="ownerID" value="0x963865f57804b38459dd4b2da2f760211a200438" size="50"><br>
-            <div class=button-div>
-                <button class="btn-fetchOne" id="button" type="button" data-id="9">Fetch Data 1</button>
-                <button class="btn-fetchTwo" id="button" type="button" data-id="10">Fetch Data 2</button>
+    <hr>
+
+    <!-- Tab links -->
+    <div class="container menu">
+        <button class="tablink" onclick="openPage('Administration')">Administration</button>
+        <button class="tablink" onclick="openPage('Farmer')" id="defaultOpen">Farmer</button>
+        <button class="tablink" onclick="openPage('Distributor')">Distributor</button>
+        <button class="tablink" onclick="openPage('Retailer')">Retailer</button>
+        <button class="tablink" onclick="openPage('Consumer')">Consumer</button>
+    </div>
+
+    <div class="container">
+        <div id="Administration" class="tabcontent">
+            <h2>Admin actions</h3>
+                <div class="form-group">
+                    <p>Assign roles</p>
+                    Owner ID
+                    <br>
+                    <p id="ownerID" size="50" class="currentUser"></p>
+                    <br>
+                    Address
+                    <br>
+                    <input type="text" id="address_role"><br>
+                    <label for="roles">Choose a role:</label>
+                    <br>
+                    <select name="roles" id="roles">
+                        <option value="farmer">Farmer</option>
+                        <option value="distributor">Distributor</option>
+                        <option value="retailer">Retailer</option>
+                        <option value="consumer">Consumer</option>
+                    </select>
+                    <br>
+                    <button class="btn-roleassignment" id="button" type="button">Assign Role</button>
+                </div>
+        </div>
+
+        <div id="Farmer" class="tabcontent">
+            <div class=form-break></div>
+            <h2>Famer actions</h2>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_farmer" value="1"><br>
+                Farmer ID
+                <br>
+                <p id="originFarmerID" size="50" class="currentUser"></p>
+                <br>
+                Farm Name
+                <br>
+                <input type="text" id="originFarmName_farmer" value="John Doe"><br>
+                Farm Information
+                <br>
+                <input type="text" id="originFarmInformation_farmer" value="Yarra Valley"><br>
+                Farm Latitude
+                <br>
+                <input type="text" id="originFarmLatitude_farmer" value="-38.239770"><br>
+                Farm Longitude
+                <br>
+                <input type="text" id="originFarmLongitude_farmer" value="144.341490"><br>
+                Product Notes
+                <br>
+                <input type="text" id="productNotes_farmer" value="Best beans for Espresso" size="60"><br>
+                Product Price
+                <br>
+                <input type="number" id="productPrice_farmer" value=1>ETH
+                <button class="supply-chain" id="button" type="button" data-id="1">Harvest</button>
+                <button class="supply-chain" id="button" type="button" data-id="2">Process</button>
+                <button class="supply-chain" id="button" type="button" data-id="3">Pack</button>
+                <button class="supply-chain" id="button" type="button" data-id="4">ForSale</button>
             </div>
         </div>
-        <div class=form-break></div>
-        <h2>Farm Details</h2>
-        <div class="form-group">
-            Farmer ID
-            <br>
-            <input type="text" id="originFarmerID" name="originFarmerID" value="0x99c289eb2aacec289631a5ddf62cf27a63d4494f"
-                size="50"><br>
-            Farm Name
-            <br>
-            <input type="text" id="originFarmName" name="originFarmName" value="John Doe"><br>
-            Farm Information
-            <br>
-            <input type="text" id="originFarmInformation" name="originFarmInformation" value="Yarra Valley"><br>
-            Farm Latitude
-            <br>
-            <input type="text" id="originFarmLatitude" name="originFarmLatitude" value="-38.239770"><br>
-            Farm Longitude
-            <br>
-            <input type="text" id="originFarmLongitude" name="originFarmLongitude" value="144.341490"><br>
-            <br>
-            <button class="btn-harvest" id="button" type="button" data-id="1">Harvest</button>
-            <button class="btn-process" id="button" type="button" data-id="2">Process</button>
-            <button class="btn-pack" id="button" type="button" data-id="3">Pack</button>
-            <button class="btn-forsale" id="button" type="button" data-id="4">ForSale</button>
+        <div id="Distributor" class="tabcontent">
+            <div class=form-break></div>
+            <h2>Distributor actions</h2>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_distributor" value="1"><br>
+                Price
+                <br>
+                <input type="text" id="productPrice_distributor" value="1"> ETH<br>
+                Distributor ID
+                <br>
+                <p class="currentUser" id="distributorID" size="50">
+                </p>
+                <br>
+                <button class="supply-chain" id="button" type="button" data-id="5">Buy</button>
+                <button class="supply-chain" id="button" type="button" data-id="6">Ship</button>
+            </div>
         </div>
-        <div class=form-break></div>
-        <h2>Product Details</h2>
-        <div class="form-group">
-            Product Notes
-            <br>
-            <input type="text" id="productNotes" name="productNotes" value="Best beans for Espresso" size="60"><br>
-            Product Price
-            <br>
-            <input type="number" id="productPrice" name="productPrice" value=1>ETH<br>
-            Distributor ID
-            <br>
-            <input type="text" id="distributorID" name="distributorID" value="0xf1b1bcd24dad92303dd9fe78be639f7bcf9c238d"
-                size="50">
-            <br>
-            Retailer ID
-            <br>
-            <input type="text" id="retailerID" name="retailerID" value="0x0fb2bfefd526966c87efa19f6693d50971763fc2"
-                size="50"><br>
-            Distributor ID
-            <br>
-            <input type="text" id="consumerID" name="consumerID" value="0x5d777e9127b28fb119e81a6304278a0a21bef1c4"
-                size="50"><br>
-            <br>
-            <button class="btn-buy" id="button" type="button" data-id="5">Buy</button>
-            <button class="btn-ship" id="button" type="button" data-id="6">Ship</button>
-            <button class="btn-receive" id="button" type="button" data-id="7">Receive</button>
-            <button class="btn-purchase" id="button" type="button" data-id="8">Purchase</button>
+
+        <div id="Retailer" class="tabcontent">
+            <div class=form-break></div>
+            <h2>Retailer actions</h2>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_retailer" value="1"><br>
+                Retailer ID
+                <br>
+                <p class="currentUser" id="retailerID" size="50">
+                </p>
+                <br>
+                <button class="supply-chain" id="button" type="button" data-id="7">Receive</button>
+            </div>
+            <div class=form-break></div>
+
         </div>
-        <div class=form-break></div>
-        <hr>
+
+        <div id="Consumer" class="tabcontent">
+            <div class=form-break></div>
+            <h2>Consumer actions</h2>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_consumer" value="1"><br>
+                Price
+                <br>
+                <input type="text" id="retailPrice_consumer" value="1"> ETH<br>
+                Consumer ID
+                <br>
+                <p class="currentUser" id="consumerID" size="50">
+                </p>
+                <br>
+                <button class="supply-chain" id="button" type="button" data-id="8">Purchase</button>
+            </div>
+            <div class=form-break></div>
+
+        </div>
+
+    </div>
+    <hr>
+    <div class="container">
+        <h2>Product Overview</h2>
+        <div>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_overview" value="1"><br>
+                <div class=button-div>
+                    <button class="supply-chain" id="button" type="button" data-id="9">Fetch Details</button>
+                </div>
+            </div>
+            <div>
+                <div class="product-overview">
+                    <p>UPC</p>
+                    <p id="upc_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>SKU</p>
+                    <p id="sku_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Product id</p>
+                    <p id="productID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Item state</p>
+                    <p id="itemState_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Owner ID</p>
+                    <p id="ownerID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Farmer ID</p>
+                    <p id="originFarmerID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Distributor ID</p>
+                    <p id="distributorID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Retailer ID</p>
+                    <p id="retailerID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Consumer ID</p>
+                    <p id="consumerID_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Farm Name</p>
+                    <p id="originFarmName_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Farm Information</p>
+                    <p id="originFarmInformation_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Farm Latitude</p>
+                    <p id="originFarmLatitude_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Farm Longitude</p>
+                    <p id="originFarmLongitude_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Product Notes</p>
+                    <p id="productNotes_result"></p>
+                </div><br>
+                <div class="product-overview">
+                    <p>Product Price</p>
+                    <p id="productPrice_result"></p>ETH
+                </div><br>
+                <div class="product-overview">
+                    <p>Retail Price</p>
+                    <p id="retailPrice_result"></p>ETH
+                </div><br>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <h2>Transaction History<span id="ftc-history"></span></h2>
+        <div>
+            <div class="form-group">
+                UPC
+                <br>
+                <input type="text" id="upc_history" value="1"><br>
+                <div class=button-div>
+                    <button class="supply-chain" id="button" type="button" data-id="10">Fetch History</button>
+                </div>
+            </div>
+            <br>
+            <div>
+                <ul id="ftc-history">
+                    <!-- History will appear here from app.js -->
+                </ul>
+                <br>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="container">
+        <h2>Event log<span id="ftc-eventlog"></span></h2>
+        <div>
+            <ul id="ftc-events">
+                <!-- Events will appear here from app.js -->
+            </ul>
+            <br>
+
+        </div>
     </div>
 
-    <h2>Transaction History<span id="ftc-history"></span></h2>
-    <div>
-        <ul id="ftc-events">
-            <!-- Events will appear here from app.js -->
-        </ul>
-        <br>
-        <hr>
-    </div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <!-- <script src="js/web3.min.js"></script> -->
-    <script src="js/truffle-contract.js"></script>
-    <script src="js/app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
+    <script src="app.js"></script>
+    <script src="tab.js"></script>
 </body>
 
 </html>
