--- a/project-6/index.html
+++ b/project-6/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container ftc-intro">
         <h1 style="text-align: center;">Fair Trade Coffee</h1>
         <p style="text-align: center;">Prove the authenticity of coffee using the Ethereum blockchain.</p>
     </div>
@@ -19,11 +19,11 @@
 
     <!-- Tab links -->
     <div class="container menu">
-        <button class="tablink" onclick="openPage('Administration')">Administration</button>
-        <button class="tablink" onclick="openPage('Farmer')" id="defaultOpen">Farmer</button>
-        <button class="tablink" onclick="openPage('Distributor')">Distributor</button>
-        <button class="tablink" onclick="openPage('Retailer')">Retailer</button>
-        <button class="tablink" onclick="openPage('Consumer')">Consumer</button>
+        <button class="tablink" name="Administration">Administration</button>
+        <button class="tablink" name="Farmer" id="defaultOpen">Farmer</button>
+        <button class="tablink" name="Distributor">Distributor</button>
+        <button class="tablink" name="Retailer">Retailer</button>
+        <button class="tablink" name="Consumer">Consumer</button>
     </div>
 
     <div class="container">
@@ -262,7 +262,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.3.5/web3.min.js"></script>
     <script src="app.js"></script>
-    <script src="tab.js"></script>
 </body>
 
 </html>
